@@ -8,6 +8,8 @@
   "factorio_version": "2.0",
   "dependencies": [
     "base >= 2.0.0",
-    "aai-signal-transmission >= 0.5.0"
+    "aai-signal-transmission >= 0.5.0",
+
+    "? SchallCircuitGroup >= 2.0.0"
   ]
 }
